# chromium-adblock

./: Makefile  README.md  core.patch  gen-ublock-resources.js  gen.js
src/chrome/browser/brave_shields/: BUILD.gn  DEPS  ad_block_pref_service_factory.cc  ad_block_subscription_download_manager_getter.cc  ad_block_subscription_download_manager_getter.h  filter_list_service_factory.cc  filter_list_service_factory.h
src/chrome/browser/cosmetic_filters/: cosmetic_filters_tab_helper.cc  cosmetic_filters_tab_helper.h
src/chrome/browser/net/: brave_ad_block_csp_network_delegate_helper.cc  brave_ad_block_csp_network_delegate_helper.h  brave_ad_block_tp_network_delegate_helper.cc  brave_ad_block_tp_network_delegate_helper.h  brave_proxying_url_loader_factory.cc  brave_proxying_url_loader_factory.h  brave_proxying_web_socket.cc  brave_proxying_web_socket.h  brave_request_handler.cc  brave_request_handler.h  resource_context_data.cc  url_context.cc  url_context.h
src/chrome/browser/resources/adblock_ui/: BUILD.gn  brave_adblock.html  brave_adblock.js
src/chrome/browser/ui/webui/: brave_adblock_ui.cc  brave_adblock_ui.h
src/components/: domain_block_strings.grdp  element_picker_strings.grdp
src/components/brave_shields/content/browser/: BUILD.gn  DEPS  ad_block_custom_filters_provider.cc  ad_block_custom_filters_provider.h  ad_block_engine.cc  ad_block_engine.h  ad_block_engine_wrapper.cc  ad_block_engine_wrapper.h  ad_block_localhost_filters_provider.cc  ad_block_localhost_filters_provider.h  ad_block_pref_service.cc  ad_block_pref_service.h  ad_block_service.cc  ad_block_service.h  ad_block_subscription_download_client.cc  ad_block_subscription_download_manager.cc  ad_block_subscription_filters_provider.cc  ad_block_subscription_filters_provider.h  ad_block_subscription_service_manager.cc  ad_block_subscription_service_manager.h  adblock_stub_response.cc  domain_block_controller_client.cc  domain_block_controller_client.h  domain_block_navigation_throttle.cc  domain_block_navigation_throttle.h  domain_block_page.cc  domain_block_tab_storage.cc  domain_block_tab_storage.h  filter_list_service.cc  filter_list_service.h
src/components/brave_shields/core/browser/: BUILD.gn  ad_block_custom_resource_provider.cc  ad_block_custom_resource_provider.h  ad_block_custom_resource_provider_unittest.cc  ad_block_dat_cache_manager.cc  ad_block_dat_cache_manager.h  ad_block_default_resource_provider.cc  ad_block_default_resource_provider.h  ad_block_filters_provider.cc  ad_block_filters_provider.h  ad_block_filters_provider_manager.cc  ad_block_filters_provider_manager.h  ad_block_resource_provider.cc  ad_block_resource_provider.h  ad_block_service_helper.cc  brave_shields_test_utils.cc  brave_shields_utils.cc  brave_shields_utils.h
src/components/brave_shields/core/common/: BUILD.gn  DEPS  brave_shield_constants.h  brave_shields_settings_values.h  features.cc  features.h  filter_list.mojom  pref_names.h  shields_settings.mojom
src/components/brave_shields/core/common/adblock/: BUILD.gn
src/components/brave_shields/core/common/adblock/resolver/: BUILD.gn  adblock_domain_resolver.cc
src/components/brave_shields/core/common/adblock/rs/: BUILD.gn
src/components/brave_shields/core/common/adblock/rs/src/: lib.rs
src/components/brave_shields/resources/: BUILD.gn  domain_block_interstitial.css  domain_block_interstitial.html
src/components/component_updater/browser/: dat_file_util.cc
src/components/cosmetic_filters/browser/: BUILD.gn  cosmetic_filters_resources.cc  cosmetic_filters_resources.h
src/components/cosmetic_filters/common/: cosmetic_filters.mojom
src/components/cosmetic_filters/renderer/: BUILD.gn  cosmetic_filters_js_handler.cc  cosmetic_filters_js_handler.h  cosmetic_filters_js_render_frame_observer.cc  cosmetic_filters_js_render_frame_observer.h
src/components/cosmetic_filters/resources/: BUILD.gn  content_cosmetic.ts  element_picker.ts
src/components/resources/: cosmetic_filters_resources.grdp
src/content/browser/devtools/: adblock_devtools_instrumentation.cc
src/content/public/browser/devtools/: adblock_devtools_instrumentation.h
