# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//testing/test.gni")

source_set("brave_shields") {
  sources = [
    "ad_block_pref_service_factory.h",
    "ad_block_subscription_download_manager_getter.h",
    "filter_list_service_factory.h",
  ]

  public_deps = [
    "//base",
    "//chrome/browser/profiles:profile",
    "//components/brave_shields/content/browser",
    "//components/brave_shields/core/common:mojom",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
    "//components/favicon/core",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/prefs",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//url",
  ]
}

source_set("brave_shields_impl") {
  sources = [
    "ad_block_pref_service_factory.cc",
    "ad_block_subscription_download_manager_getter.cc",
    "filter_list_service_factory.cc",
  ]

  public_deps = [ ":brave_shields" ]

  deps = [
    "//base:i18n",
    "//components/brave_shields/core/browser",
    "//components/brave_shields/core/common",
    "//chrome/browser:browser_process",
    "//chrome/browser/content_settings:content_settings_factory",
    "//chrome/browser/download",
    "//chrome/browser/net",
    "//chrome/browser/profiles",
    "//chrome/common:mojo_bindings",
    "//components/content_settings/core/browser:cookie_settings",
    "//components/favicon/content",
    "//components/prefs",
    "//components/proxy_config",
    "//components/user_prefs",
    "//extensions/buildflags",
    "//net",
    "//net:net_features",
  ]
}
