# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")

source_set("renderer") {
  visibility = [
    "//chrome/renderer/*",
    "//components/content_settings/renderer/*",
  ]

  sources = [
    "cosmetic_filters_js_handler.cc",
    "cosmetic_filters_js_handler.h",
    "cosmetic_filters_js_render_frame_observer.cc",
    "cosmetic_filters_js_render_frame_observer.h",
  ]

  deps = [
    "//base",
    "//components/brave_shields/core/common",
    "//components/cosmetic_filters/common:mojom",
    "//components/content_settings/renderer",
    "//components/resources:components_resources",
    "//content/public/renderer",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//third_party/blink/public/common",
    "//v8",
  ]
}
