# Copyright 2026 The ungoogled-chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "adblock_ui"

  static_files = [ "brave_adblock.html" ]

  ts_files = [ "brave_adblock.js" ]

  ts_deps = [ "//ui/webui/resources/js:build_ts" ]

  webui_context_type = "trusted"
}
