# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

static_library("browser") {
  sources = [
    "ad_block_custom_filters_provider.cc",
    "ad_block_custom_filters_provider.h",
    "ad_block_engine.cc",
    "ad_block_engine.h",
    "ad_block_engine_wrapper.cc",
    "ad_block_engine_wrapper.h",
    "ad_block_localhost_filters_provider.cc",
    "ad_block_localhost_filters_provider.h",
    "ad_block_pref_service.cc",
    "ad_block_pref_service.h",
    "ad_block_service.cc",
    "ad_block_service.h",
    "ad_block_subscription_download_client.cc",
    "ad_block_subscription_download_client.h",
    "ad_block_subscription_download_manager.cc",
    "ad_block_subscription_download_manager.h",
    "ad_block_subscription_filters_provider.cc",
    "ad_block_subscription_filters_provider.h",
    "ad_block_subscription_service_manager.cc",
    "ad_block_subscription_service_manager.h",
    "ad_block_subscription_service_manager_observer.h",
    "adblock_stub_response.cc",
    "adblock_stub_response.h",
    "domain_block_controller_client.cc",
    "domain_block_controller_client.h",
    "domain_block_navigation_throttle.cc",
    "domain_block_navigation_throttle.h",
    "domain_block_page.cc",
    "domain_block_page.h",
    "domain_block_tab_storage.cc",
    "domain_block_tab_storage.h",
  ]

  deps = [
    "//base",
    "//components/brave_shields/core/browser",
    "//components/brave_shields/core/common",
    "//components/brave_shields/core/common:mojom",
    "//components/brave_shields/core/common/adblock",
    "//components/content_settings/core/common",
    "//components/component_updater",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/browser:cookie_settings",
    "//components/content_settings/core/common",
    "//components/pref_registry",
    "//components/prefs",
    "//components/proxy_config",
    "//components/security_interstitials/content:security_interstitial_page",
    "//components/security_interstitials/core",
    "//components/user_prefs",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//third_party/blink/public/mojom:mojom_platform_headers",
    "//url",
  ]
}
