# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

static_library("browser") {
  sources = [
    "ad_block_custom_resource_provider.cc",
    "ad_block_custom_resource_provider.h",
    "ad_block_dat_cache_manager.cc",
    "ad_block_dat_cache_manager.h",
    "ad_block_default_resource_provider.cc",
    "ad_block_default_resource_provider.h",
    "ad_block_filters_provider.cc",
    "ad_block_filters_provider.h",
    "ad_block_filters_provider_manager.cc",
    "ad_block_filters_provider_manager.h",
    "ad_block_resource_provider.cc",
    "ad_block_resource_provider.h",
    "ad_block_service_helper.cc",
    "ad_block_service_helper.h",
    "brave_shields_utils.cc",
    "brave_shields_utils.h",
  ]
  deps = [
    "//base",
    "//components/brave_shields/core/common",
    "//components/brave_shields/core/common:mojom",
    "//components/content_settings/core/common",
    "//components/component_updater",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/browser:cookie_settings",
    "//components/content_settings/core/common",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/value_store",
    "//crypto",
    "//url",
  ]
  public_deps = [
    "//base",
    "//components/brave_shields/core/common/adblock",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [
    "ad_block_custom_resource_provider_unittest.cc",
    "brave_shields_settings_service_unittest.cc",
  ]

  deps = [
    ":browser",
    "//base/test:test_support",
    "//components/brave_shields/core/common",
    "//components/brave_shields/core/common/adblock",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
    "//components/content_settings/core/test:test_support",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/sync_preferences:test_support",
    "//testing/gtest",
    "//url",
  ]
}

static_library("test_support") {
  testonly = true
  sources = [
    "brave_shields_test_utils.cc",
    "brave_shields_test_utils.h",
  ]
  deps = [
    ":browser",
    "//base",
  ]
}
