# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

group("adblock") {
  visibility = [
    "//components/brave_shields/content/browser:*",
    "//components/brave_shields/core/browser:*",
    "//components/brave_shields/core/common:*",
  ]
  deps = [
    "resolver",
    "rs:rust_lib",
  ]

  public_deps = [ "rs:rust_lib_cxx_generated_gen" ]
}
